--- a/client/src/scss/global/_mixins.scss
+++ b/client/src/scss/global/_mixins.scss
@@ -115,4 +115,9 @@
     to {
       transform: rotate(0);
     }
-  }
+}
+@keyframes autoScroll {
+    0% {transform: translateY(0%);}
+    50% {transform: translateY(-80%);}
+    100% {transform: translateY(-0%);}
+}
