--- a/client/src/scss/global/_vars.scss
+++ b/client/src/scss/global/_vars.scss
@@ -43,3 +43,17 @@ $color-white:var(--color-white);
 .no-trans{
     transform: none!important;
 }
+.img-scroll{
+    img{
+        width: 100%;
+        height: auto;
+        max-width: 100%;
+        transition: all 2s;
+        animation-duration: 25s;
+        animation-name: autoScroll;
+        animation-iteration-count: 1000;
+    }
+}
+.text-ogg{
+    font-family: Ogg, "Cormorant Upright", serif;
+}
