--- a/client/src/scss/global/_vars.scss
+++ b/client/src/scss/global/_vars.scss
@@ -57,3 +57,12 @@ $color-white:var(--color-white);
 .text-ogg{
     font-family: Ogg, "Cormorant Upright", serif;
 }
+.lazyload {
+    opacity: 0;
+}
+
+.lazyloading {
+    opacity: 1;
+    transition: opacity 300ms;
+    background: url("../../asset/image/icons/load.gif") no-repeat center;
+}
