--- a/client/src/scss/module/_cursor.scss
+++ b/client/src/scss/module/_cursor.scss
@@ -16,13 +16,13 @@
 .cursor,.follower{
     will-change: transform;
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     pointer-events: none;
     border-radius: 50%;
     mix-blend-mode: difference;
     -webkit-transform: scale(1);
-    transform: scale(1)
+    transform: scale(1);
 }
 .cursor{
     width: 8px;
@@ -36,6 +36,11 @@
     opacity: 0;
 }
 .cursor.is-product{
+    -webkit-transform: scale(10);
+    transform: scale(10);
+    opacity: 0;
+}
+.cursor.is-img{
     -webkit-transform: scale(10);
     transform: scale(10);
     opacity: 0;
@@ -57,6 +62,15 @@
     background-color: #ffffff;
     -webkit-transform: scale(1.6);
     transform: scale(1.6)
+}
+.follower.is-img{
+    width:39vw;
+    height:23vw;
+    border:none;
+    border-radius:0;
+    background: url("../../asset/image/icons/load.gif") no-repeat center;
+    background-size: 100%;
+    mix-blend-mode:unset!important;
 }
 .follower.is-product{
     mix-blend-mode: unset;
