--- a/client/src/scss/pages/_product.scss
+++ b/client/src/scss/pages/_product.scss
@@ -255,6 +255,7 @@
             padding:35vw 0 40vh 0;
             width:65%;
             max-width: 65%!important;
+            overflow-x: hidden;
             .productPage-video__iframe{
                 margin-top: 15vw;
             }
