rourer change reload product

--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -45,13 +45,10 @@
 .text-ogg {
   font-family: Ogg, "Cormorant Upright", serif; }
 
-.lazyload {
-  opacity: 0; }
-
-.lazyloading {
-  opacity: 1;
-  transition: opacity 300ms;
-  background: url("../../asset/image/icons/load.gif") no-repeat center; }
+.placeholder {
+  width: 100px !important;
+  height: 100px !important;
+  margin: 0 auto; }
 
 @keyframes lightclick {
   0% {
