button next project

--- a/client/src/scss/module/_menu.scss
+++ b/client/src/scss/module/_menu.scss
@@ -44,6 +44,7 @@
                         font-size: 3vw;
                         color:$color-dark;
                         transition:0.5s;
+                        text-transform: capitalize;
                     }
                 }
             }
