--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -617,7 +617,8 @@ h1, h2, h3 {
             font-family: 'vladimir', sans-serif;
             font-size: 3vw;
             color: var(--color-dark);
-            transition: 0.5s; }
+            transition: 0.5s;
+            text-transform: capitalize; }
       .menu .menuProducts .container .menuProduct-first {
         margin-top: 0 !important; }
   .menu__close {
