--- a/client/src/scss/module/_cursor.scss
+++ b/client/src/scss/module/_cursor.scss
@@ -98,7 +98,7 @@
 }
 //table and mobile
 @media (max-width: 1200px){
-    .hover-cursor-trans,.hover-cursor,.hover-text{
+    .hover-cursor-trans,.hover-cursor,.hover-text,.hover-img{
         transform:none!important;
     }
 }
