--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -574,7 +574,7 @@ h1, h2, h3 {
     justify-content: center; }
 
 @media (max-width: 1200px) {
-  .hover-cursor-trans, .hover-cursor, .hover-text {
+  .hover-cursor-trans, .hover-cursor, .hover-text, .hover-img {
     transform: none !important; } }
 
 /*==================== MENU ====================*/
@@ -611,7 +611,7 @@ h1, h2, h3 {
             transition: 0.5s; }
         .menu .menuProducts .container .menuProduct__name {
           position: absolute;
-          bottom: -2vw;
+          bottom: -2.3vw;
           right: 0; }
           .menu .menuProducts .container .menuProduct__name h2 {
             font-family: 'vladimir', sans-serif;
@@ -684,7 +684,7 @@ h1, h2, h3 {
         .menu .menuProducts .container .menuProduct__img {
           height: 50vw; }
         .menu .menuProducts .container .menuProduct__name {
-          bottom: -7vw; }
+          bottom: -8vw; }
           .menu .menuProducts .container .menuProduct__name h2 {
             font-size: 10vw; }
   .arrowDark {
