--- a/client/src/scss/pages/_product.scss
+++ b/client/src/scss/pages/_product.scss
@@ -60,7 +60,7 @@
                 left:0;
                 top:3vw;
                 width:55%;
-                // mix-blend-mode: difference;
+                mix-blend-mode: difference;
                 .productPage-decription{
                     &__title{
                         h3{
