--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -33,6 +33,9 @@
 .no-trans {
   transform: none !important; }
 
+.no-mix {
+  mix-blend-mode: unset !important; }
+
 .img-scroll img {
   width: 100%;
   height: auto;
@@ -596,7 +599,7 @@ h1, h2, h3 {
       .menu .menuProducts .container .menuProduct {
         cursor: none;
         position: relative;
-        margin-top: 5vw; }
+        margin-top: 4vw; }
         .menu .menuProducts .container .menuProduct__img {
           width: 100%;
           height: 15vw;
@@ -1083,7 +1086,8 @@ h1, h2, h3 {
         z-index: 5;
         left: 0;
         top: 3vw;
-        width: 55%; }
+        width: 55%;
+        mix-blend-mode: difference; }
         .productPage .container .productPage-view .productPage-info .productPage-decription__title h3 {
           font-size: 1.8vw; }
         .productPage .container .productPage-view .productPage-info .productPage-decription__content {
