--- a/client/src/scss/global/_vars.scss
+++ b/client/src/scss/global/_vars.scss
@@ -43,6 +43,9 @@ $color-white:var(--color-white);
 .no-trans{
     transform: none!important;
 }
+.no-mix{
+    mix-blend-mode: unset!important;
+}
 .img-scroll{
     img{
         width: 100%;
