--- a/client/src/scss/pages/_product.scss
+++ b/client/src/scss/pages/_product.scss
@@ -218,6 +218,7 @@
                 }
                 a{
                     i{
+                        display: block;
                         font-size:5.46875vw;
                         font-weight:600;
                         -webkit-text-stroke-width: 1px;
@@ -360,7 +361,7 @@
                     a{
                         i{
                             font-size:7vw;
-                            line-height: 3vw;
+                            line-height: 8vw;
                         }
                     }
                 }
