--- a/client/src/scss/pages/_home.scss
+++ b/client/src/scss/pages/_home.scss
@@ -1,7 +1,7 @@
 /*==================== HOME ====================*/
 
 .home{
-    padding:15vw 0 17vw 0 ;
+    padding:35vh 0 35vh 0 ;
     width:100vw;
     transition:0.5s;
     opacity: 0;
