--- a/client/src/scss/pages/_product.scss
+++ b/client/src/scss/pages/_product.scss
@@ -96,6 +96,7 @@
                                 overflow: hidden;
                                 text-overflow: ellipsis;
                                 a{
+                                    color:#eaeaea!important;
                                     svg{
                                         width:1.328vw;
                                         margin-left: 0.78vw;
