--- a/admin/src/scss/pages/_dashboard.scss
+++ b/admin/src/scss/pages/_dashboard.scss
@@ -8,6 +8,8 @@
     width: 100%;
     height: 85%;
     z-index: 0;
+    object-fit: cover;
+    image-rendering: -webkit-optimize-contrast;
   }
   .paperProduct {
     flex-wrap: wrap;
@@ -63,6 +65,9 @@ label{
     flex-direction: column!important;
     .nameImgDemo {
         width: 200px !important;
+    }
+    .textarea{
+        padding:10px
     }
     .btn-box{
         display: flex;
